refactor : 사용하지 않는 코드 제거
사용하지 않는 cache기능, interface, domain 삭제